# PharmaOS

./: .dockerignore  .env.example  .gitignore  AGENT_FRAMEWORK.md  Dockerfile  INTEGRATION_GUIDE.md  Makefile  PHASE_8_5_SUMMARY.md  README.md  VALIDATION_CHECKLIST.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README.md  env.py
docs/: portfolio-positioning.md  reviewer-demo-flow.md
docs/architecture/: phase-1-bootstrap.md  phase-2-runtime-foundation.md  phase-5-feature-engineering-analytics.md  phase-6-ml-training-pipelines.md  phase-7-inference-serving-layer.md  phase-8-agentic-ai-orchestration.md  system-overview.md
examples/: agent_framework_usage.py
scripts/: generate_demo_datasets.py  run_agent.py  run_analytics_exports.py  run_data_pipeline.py  run_feature_analytics.py  run_inference.py  run_ml_training.py  run_runtime_smoke.py
src/pharma_os/: __init__.py  main.py
src/pharma_os/agents/: __init__.py  eligibility_analyst.py  research_summarizer.py  safety_investigator.py
src/pharma_os/agents/base/: __init__.py  agent.py  contracts.py  tools.py  trace.py
src/pharma_os/agents/core/: __init__.py  composite_handler.py  context.py  factory.py  formatting.py  pipeline_manager.py  result_builders.py  tool_executor.py
src/pharma_os/analytics/: __init__.py
src/pharma_os/api/: __init__.py  dependencies.py  exception_handlers.py
src/pharma_os/core/: __init__.py  exceptions.py  lifecycle.py  settings.py
src/pharma_os/db/: __init__.py  mongo.py  mongo_collections.py  postgres.py
src/pharma_os/features/: __init__.py
src/pharma_os/ml/: __init__.py  contracts.py
src/pharma_os/observability/: __init__.py  logging.py
src/pharma_os/pipelines/: __init__.py
src/pharma_os/services/: __init__.py  prediction_services.py
tests/: __init__.py
tests/unit/: test_imports.py
tests/unit/agents/: test_agent_implementations.py  test_core_infrastructure.py  test_formatting.py
(+122 files in other folders)
