[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pharma-os"
version = "0.1.0"
description = "PHARMA-OS: Multi-Agent Clinical Intelligence, Trial Matching, and Drug Safety Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "PharmaOS Engineering" }
]
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
  "alembic>=1.16.0,<2.0.0",
  "psycopg2-binary>=2.9.10,<3.0.0",
  "motor>=3.7.0,<4.0.0",
  "pymongo>=4.11.0,<5.0.0",
  "pandas>=2.3.0,<3.0.0",
  "polars>=1.31.0,<2.0.0",
  "scikit-learn>=1.7.0,<2.0.0",
  "xgboost>=3.0.0,<4.0.0",
  "langgraph>=0.6.0,<1.0.0",
  "langchain>=0.3.27,<1.0.0",
  "chromadb>=1.0.15,<2.0.0",
  "joblib>=1.5.0,<2.0.0",
  "python-json-logger>=3.3.0,<4.0.0",
  "tenacity>=9.1.0,<10.0.0",
  "httpx>=0.28.1,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "pytest-cov>=6.2.0,<7.0.0",
  "ruff>=0.12.0,<1.0.0",
  "mypy>=1.17.0,<2.0.0",
  "types-PyYAML>=6.0.12.20250516",
  "types-requests>=2.32.4.20250611"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --disable-warnings"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
namespace_packages = true
mypy_path = "src"

[tool.coverage.run]
branch = true
source = ["src/pharma_os"]
